# scala3-sample

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  .sbtopts  .scalafmt.conf  LICENSE  README.md  build.sbt  codecov.yaml  docker-compose.yml  pyproject.toml  sbt.properties
.github/actions/: codecov-publish.yml
.github/actions/codecov-publish/: action.yml
.github/actions/setup-java/: action.yml
.github/workflows/: build-test.yml  publish-libraries.yml
Writerside/: s.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: Overview-Test.md
analysis/: README.md
analysis/src/dummy/: dd.py
analysis/src/salduba/ddes/analysis/: scratch.ipynb  tst.py  util.py
analysis/src/sql/: queuing_times.sql
analysis/tests/: tst_spec.py
analysis/tests/resources/: logging.yaml
app/: build.sbt
app/src/main/resources/: api.conf  application.conf  db.conf  logback.xml
app_deploy/src/test/docker/: docker-compose.yml
certs/: aiven_ca.pem
dcf/: build.sbt
dcf/src/main/resources/: application.conf  db.conf
dcf/src/test/resources/: logback-test.xml
ddes/: build.sbt
ddes/src/test/resources/: logback-test.xml
docs/: mkdocs.yml  mkdocs_local.yml  quick-notes.md  test.puml  workflow.md
docs/bibtex/: refs.bib
docs/contents/: .pages  OperationalResourceFlat_SC.puml  OperationalResource_SC.puml  headerTemplate.md  job_task_CD.puml  to-do.md
docs/contents/node-anatomy/: .pages  operational-view.md
docs/contents/simple-station/: .pages  Action_AD.puml  PushStationWip_AD.puml  controlled_timeline_TM.puml  job_timeline_TM.puml  material-arrival.md  push-controller-e2e.md  push_timeline_TM.puml  timeline_defs.ipuml
image/: Dockerfile  build.sbt
lib/: build.sbt
lib/src/test/resources/: animals_schema.sql  item_schema.sql  logback-test.xml  logback.xml  sample_repo_table.sql
project/: CustomKeys.scala  Dependencies.scala  Utilities.scala  build.sbt  metals.sbt  plugins.sbt
project/project/: metals.sbt
project/project/project/: metals.sbt
sandbox/: build.sbt
sandbox/src/main/resources/: logback.xml
sandbox/src/test/resources/: logback-test.xml  logback.xml
sandbox_deploy/src/test/docker/: docker-compose.yml
scripts/: app-docker-run.sh
scripts/database/: reset_db.py
(+354 files in other folders)
